--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -876,7 +876,7 @@ The train set serves to learn a statistic, and the test set to compute it.
 In a train-test validation scheme, the effective sample size is that of the test set.
 This is clearly inefficient. 
 In V-fold validation scheme, the statistic is the average over all test sets, so the effective sample size is less obvious. 
-We still argue that this is an inefficient use of the data, as seen in the distributed learning literature, where splitting the sample and averaging is less accurate then learning with the whole data \cite{rosenblatt2016optimality}.
+We argue that this is an inefficient use of the data, as seen in the distributed learning literature, where splitting the sample and averaging is less accurate then learning with the whole data \cite{rosenblatt2016optimality}.
 
 The superiority of the Bootstrap over V-fold was independently observed in \cite{yu2007two}. 
 According to these authors, this superiority is due to the larger test-samples when Bootstrapping, compared to V-folding.
@@ -900,7 +900,7 @@ Permutation testing with discrete test statistics are known to be conservative.
 Firstly, because a Monte-Carlo sample of permutations will always be conservative compared to a full enumeration of permutations \cite{hemerik_exact_2014}.
 Secondly, because of the presence of ties which does not allow to exhaust the permissible false positive rate, unless randomization is introduced.
 Thirdly, because a highly discrete test-statistic, is insensitive to mild perturbations of the data.
-For an intuition consider the usage of the \emph{resubstitution accuracy}, a.k.a.\ the \emph{train error}, or \emph{empirical risk}, as a test statistic. 
+For an intuition consider the usage of the \emph{resubstitution accuracy} as a test statistic. 
 Resubstitution accuracy is the accuracy of the classifier evaluated on the training set.
 If data is high dimensional, the resubstitution accuracy will be very high due to over fitting. 
 In a very high dimensional regime, the resubstitution accuracy may be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
@@ -908,13 +908,15 @@ The concentration of resubstitution accuracy near $1$, and its discretization, r
 This explains the terrible power of \emph{svm.noCV.c100}.
 
 The degree of discretization is governed by the sample size. 
-For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016}, or \cite{golland_permutation_2005}, will not capture power loss due to discretization\footnote{This actually holds for all power analyses relying on a \emph{contiguity} argument \cite[Ch.6]{vaart_asymptotic_1998}.}.
+For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016}, or \cite{golland_permutation_2005}, will not capture power loss due to discretization. This actually holds for all power analyses relying on a \emph{contiguity} argument \cite[Ch.6]{vaart_asymptotic_1998}.
 An asymptotic analysis may suggest resubstitution accuracy estimates are good test statistics, while they suffer from very low finite-sample power. 
-The canonical remedy for ties--- random tie breaking --- showed only a minor improvement (Sec.~\ref{sec:ties}).
+The canonical remedy for ties--- random tie breaking --- showed only a minor improvement (not reported herein).
 
 Using our simulations we may quantify the power loss due to discretization. 
-This is because Figher's LDA is essentially ordinary least squares with a discretization stage. 
-[TODO: add figure with OLS classifier]
+This is because Figher's LDA is equivalent to Hotelling's $T^2$ with a discretization stage. 
+From Figure~\ref{fig:simulation_1} we see that for the intermediate signal's strength, \emph{Hotelling} has roughly twice the power of \emph{lda.noCV.1}.
+We thus conclude that the effect of discretization may be considerable. 
+
 
 The matter of discretization can be summarized by a $2011$ post by Prof. Frank Harrell in \textsf{CrossValidated\footnote{A Q\&A website for statistical questions: \url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}. And also ``Problems with Classification of Predictions'' in his book: \url{http://www.fharrell.com/doc/bbr.pdf}}}:
 \begin{quote}
@@ -931,7 +933,7 @@ To do so we typically use a NPL type argument, and think:
 What type of signal is a test sensitive to?
 What is the direction of the effect? etc.
 Accuracy tests are seen as ``black boxes'', even though they can be analyzed in the same way. 
-\cite{gilron2017s} demonstrate that the type of signal captured by accuracy tests is less interpretable to neuroimaging practitioners than two-group tests. 
+Gilron et at.\cite{gilron2017s} demonstrate that the type of signal captured by accuracy tests is less interpretable to neuroimaging practitioners than two-group tests. 
 
 Some authors prefer accuracy tests because they can be seen as effect-size estimates, invariant to the sample size. 
 This is true, but the multivariate-statistics literature provides many multivariate effect-size estimators, that generalize Cohen's d. 
@@ -944,7 +946,9 @@ Examples can be found, for instance, in \cite{stevens2012applied} and references
 \label{sec:fix_snr}
 
 For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
-For ``a fair comparison'' we fix the Kullback–Leibler Divergence between distributions of sample means. Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$.
+For ``a fair comparison'' we fix the Kullback–Leibler Divergence between distributions of sample means. 
+Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$.
+Because sample sizes are fixed in our simulation, with the exception of Section~\ref{sec:large-sample}, we did not actually fix $KL[\bar x_1,\bar x_0]$, but rather $\Vert \mu \Vert^2_\Sigma$. 
 
 Our choice implies that the Euclidean norm of $\delta:=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
