--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1904,3 +1904,15 @@ Contact: tongt@hkbu.edu.hk},
 	pages={609--616},
 	year={2009}
 }
+
+
+@article{chang2011libsvm,
+	title={LIBSVM: a library for support vector machines},
+	author={Chang, Chih-Chung and Lin, Chih-Jen},
+	journal={ACM transactions on intelligent systems and technology (TIST)},
+	volume={2},
+	number={3},
+	pages={27},
+	year={2011},
+	publisher={Acm}
+}
