--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -508,6 +508,7 @@ The results are reported in Figure~\ref{fig:large-sample}.
 
 
 \subsection{Departure From Gaussianity}
+\label{sec:heavytailed}
 The Neyman-Pearson Lemma (NPL) type reasoning that favors two-group location-tests over accuracy-tests in our simulations, may fail when the data is not multivariate Gaussian, and Hotelling's $T^2$ statistic no longer a generalized-likelihood-ratio test. 
 
 To check this, we replaced the multivariate Gaussian distribution of $\eta$ in Eq.(\ref{eq:distribution}) with a heavy-tailed multivariate-$t$ distribution. 
@@ -893,24 +894,23 @@ Firstly, because a Monte-Carlo sample of permutations will always be conservativ
 Secondly, because of the presence of ties which does not allow to exhaust the permissible false positive rate, unless randomization is introduced.
 Thirdly, because a highly discrete test-statistic, is insensitive to mild perturbations of the data.
 For an intuition consider the usage of the \emph{resubstitution accuracy} as a test statistic. 
-Resubstitution accuracy is the accuracy of the classifier evaluated on the training set.
-If data is high dimensional, the resubstitution accuracy will be very high due to over fitting. 
 In a very high dimensional regime, the resubstitution accuracy may be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
 The concentration of resubstitution accuracy near $1$, and its discretization, render this test completely useless, with power tending to $0$ for any (fixed) effect size, as the dimension of the model grows. 
-This explains the terrible power of \emph{svm.noCV.c100}.
+This explains the terrible power of \emph{svm.noCV.c100}, which has barely any regularization\footnote{Recall that the cost parameter in LIBSVM is inversely proportional to the regularization.}. 
 
 The degree of discretization is governed by the sample size. 
 For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016}, or \cite{golland_permutation_2005}, will not capture power loss due to discretization. This actually holds for all power analyses relying on a \emph{contiguity} argument \cite[Ch.6]{vaart_asymptotic_1998}.
-An asymptotic analysis may suggest resubstitution accuracy estimates are good test statistics, while they suffer from very low finite-sample power. 
+An asymptotic analysis, which eschews the discretization effect,  may suggest resubstitution accuracy estimates are good test statistics, while they suffer from very low finite-sample power. 
+One of the effects of discretization is ties. 
 The canonical remedy for ties--- random tie breaking --- showed only a minor improvement (not reported herein).
 
 Using our simulations we may quantify the power loss due to discretization. 
-This is because Figher's LDA is equivalent to Hotelling's $T^2$ with a discretization stage. 
+This is because Figher's LDA is equivalent to Hotelling's $T^2$ followed by a discretization stage. 
 From Figure~\ref{fig:simulation_1} we see that for the intermediate signal's strength, \emph{Hotelling} has roughly twice the power of \emph{lda.noCV.1}.
 We thus conclude that the effect of discretization may be considerable. 
 
 
-The matter of discretization can be summarized by a $2011$ post by Prof. Frank Harrell in \textsf{CrossValidated\footnote{A Q\&A website for statistical questions: \url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}. And also ``Problems with Classification of Predictions'' in his book: \url{http://www.fharrell.com/doc/bbr.pdf}}}:
+The matter of discretization was addressed by a $2011$ post by Prof. Frank Harrell in \textsf{CrossValidated\footnote{A Q\&A website for statistical questions: \url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}. And also ``Problems with Classification of Predictions'' in his book: \url{http://www.fharrell.com/doc/bbr.pdf}}}:
 \begin{quote}
 	... your use of proportion classified correctly as your accuracy score. This is a discontinuous improper scoring rule that can be easily manipulated because it is arbitrary and insensitive.
 \end{quote}
@@ -939,8 +939,7 @@ Examples can be found, for instance, in \cite{stevens2012applied} and references
 
 For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
 For ``a fair comparison'' we fix the Kullback–Leibler Divergence between distributions of sample means. 
-Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$.
-Because sample sizes are fixed in our simulation, with the exception of Section~\ref{sec:large-sample}, we did not actually fix $KL[\bar x_1,\bar x_0]$, but rather $\Vert \mu \Vert^2_\Sigma$. 
+Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$, which is the same as fixing $\Vert \mu \Vert^2_\Theta$, with the exception of the large sample (\ref{sec:large-sample}) and the heavytailed analysis (\ref{sec:heavytailed}). 
 
 Our choice implies that the Euclidean norm of $\delta:=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
